<resources>
    <string name="app_name">Run</string>
    <string name="btn">Button</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
<<<<<<< HEAD
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="comments_about_the_run">Comments about the run</string>
    <string name="rate_your_run_how_do_you_feel">Rate your run (How do you feel?)</string>
    <string name="kmuzrasas">KmUzrasas</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="timeuzrasas">TImeUzrasas</string>
    <string name="time">Time</string>
    <string name="paceuzrasas">PaceUzrasas</string>
    <string name="pace">Pace</string>
    <string name="km">Km</string>
    <string name="laikuiuzrasyti">LaikuiUzrasyti</string>
    <string name="paceuiuzrasyti">PaceuiUzrasyti</string>
    <string name="kilometramsirasyti">kilometramsIrasyti</string>
    <string name="rate_your_run_from_1_to_10">Rate your run from 1 to 10</string>
=======

    <string name="stop">Stop Timer</string>
    <string name="start">Start Timer</string>
    <string name="working">Started</string>
    <string name="stopped">Stopped</string>
>>>>>>> origin/Arnelio
</resources>